tests/expectations/parser/program/non_aleo_network_fail.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370028]: Invalid network identifier. The only supported identifier is `.aleo`.
    --> test:3:14
     |
   3 | program test.eth {
     |              ^^^"""]
